--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest-extended": "^3.2.4",
     "rimraf": "^5.0.0",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
