--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"src/**/*.ts\"",
-    "test": "jest"
+    "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings=ExperimentalWarning\" jest",
+    "test:cov": "npm run test -- --coverage"
   },
   "dependencies": {},
   "devDependencies": {
