--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings=ExperimentalWarning\" jest",
     "test:cov": "npm run test -- --coverage"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash-es": "^4.17.21"
+  },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.0",
     "@types/jest": "^29.5.1",
+    "@types/lodash": "^4.14.194",
+    "@types/lodash-es": "^4.17.7",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
