--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "dist", "**/*spec.ts", "**/*.test.ts"],
+  "exclude": ["dist", "jest.config.ts", "**/*spec.ts", "**/*.test.ts"],
   "compilerOptions": {
     "sourceMap": false,
     "incremental": false
