--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "test:cov": "npm run test -- --coverage"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
