--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "exports": {
     ".": "./dist/index.js",
     "./configuration": "./dist/configuration.index.js",
+    "./function-registry": "./dist/function-registry.index.js",
     "./service-cache": "./dist/service-cache.index.js",
     "./validation": "./dist/validation.index.js"
   },
