--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
   "dependencies": {
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "lodash-es": "^4.17.21"
+    "js-yaml": "^4.1.0",
+    "lodash-es": "^4.17.21",
+    "pino": "^8.12.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.0",
     "@types/jest": "^29.5.1",
+    "@types/js-yaml": "^4.0.5",
     "@types/lodash": "^4.14.194",
     "@types/lodash-es": "^4.17.7",
     "eslint": "^8.39.0",
