--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Provides the base functionalities for a workspace: configuration loading and registering functions.",
   "repository": "github:causa-io/workspace",
+  "license": "ISC",
   "type": "module",
   "engines": {
     "node": ">=16"
@@ -18,6 +19,7 @@
   },
   "files": [
     "dist/",
+    "LICENSE.md",
     "package.json",
     "README.md"
   ],
