🐛 Fix package subpath exports

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js",
-    "./configuration": "./dist/configuration.index.js",
-    "./function-registry": "./dist/function-registry.index.js",
-    "./service-cache": "./dist/service-cache.index.js",
-    "./validation": "./dist/validation.index.js"
+    "./configuration": "./dist/configuration/index.js",
+    "./function-registry": "./dist/function-registry/index.js",
+    "./service-cache": "./dist/service-cache/index.js",
+    "./validation": "./dist/validation/index.js"
   },
   "files": [
     "dist/",
