--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "class-validator": "^0.14.0",
     "js-yaml": "^4.1.0",
     "lodash-es": "^4.17.21",
-    "pino": "^8.12.0"
+    "pino": "^8.12.0",
+    "resolve-package-path": "^4.0.3",
+    "semver": "^7.5.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.0",
@@ -44,6 +46,7 @@
     "@types/js-yaml": "^4.0.5",
     "@types/lodash": "^4.14.194",
     "@types/lodash-es": "^4.17.7",
+    "@types/semver": "^7.3.13",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
