--- a/package.json
+++ b/package.json
@@ -48,8 +48,9 @@
     "@types/jest": "^29.5.1",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash-es": "^4.17.7",
+    "@types/node": "^18.16.14",
     "@types/semver": "^7.5.0",
-    "eslint": "^8.40.0",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
