--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     ".": "./dist/index.js",
     "./configuration": "./dist/configuration/index.js",
     "./function-registry": "./dist/function-registry/index.js",
+    "./initialization": "./dist/initialization/index.js",
     "./service-cache": "./dist/service-cache/index.js",
     "./testing": "./dist/testing/index.js",
     "./validation": "./dist/validation/index.js"
