--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.16.16",
     "@types/semver": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
