--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.19.54",
     "@types/semver": "^7.5.8",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -62,6 +61,7 @@
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
   }
 }
