--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.19.130",
     "@types/semver": "^7.7.1",
+    "cpy-cli": "^7.0.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
