🔨 Include the JSONSchema for the base configuration in the package

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "tsc -p tsconfig.build.json",
+    "postbuild": "cpy 'context/schemas/**' '../dist/' --cwd=src --base=cwd",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"src/**/*.ts\"",
     "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings=ExperimentalWarning\" jest",
