--- a/src/context/schemas/base-configuration.yaml
+++ b/src/context/schemas/base-configuration.yaml
@@ -48,6 +48,10 @@ properties:
         type: string
         description: The programming language for the project.
 
+      description:
+        type: string
+        description: A description for the project.
+
       externalFiles:
         type: array
         items:
