--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lint": "eslint \"src/**/*.ts\"",
     "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings=ExperimentalWarning\" jest",
     "test:cov": "npm run test -- --coverage",
+    "typecheck": "tsc --noEmit",
     "generateConfigurationSchemas": "cs model genCode && perl -pi -e 's|\\@causa/runtime|../validation/index.js|g' src/context/generated.ts"
   },
   "dependencies": {
